node-main/deps/v8/test/message/fail/destructuring-undefined-computed-property.out
*%(basename)s:5: TypeError: Cannot destructure 'undefined' as it is undefined.
var { [x] : y } = undefined;
                  ^
TypeError: Cannot destructure 'undefined' as it is undefined.
    at *%(basename)s:5:5
